// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nitro > should parse nitro enclave attestation 1`] = `
{
  "moduleId": "i-08855bf8be36b398e-enc01966a09e8cbdc64",
  "nonce": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "pcrs": {
    "0": "88:1F:CB:BA:2F:0B:5E:67:86:77:0B:08:7A:4C:94:25:FD:9C:CC:E6:E2:76:10:B2:7C:64:FD:92:A3:1A:AB:4C:DA:96:2B:8D:81:0F:01:EA:E5:B8:46:AA:56:6B:8C:E2",
    "1": "4B:4D:5B:36:61:B3:EF:C1:29:20:90:0C:80:E1:26:E4:CE:78:3C:52:2D:E6:C0:2A:2A:5B:F7:AF:3A:2B:93:27:B8:67:76:F1:88:E4:BE:1C:1C:40:4A:12:9D:BD:A4:93",
    "10": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "11": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "12": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "13": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "14": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "15": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "2": "7F:63:62:CD:21:3C:52:AE:DA:29:29:82:A6:D7:0B:35:41:3C:BE:F0:37:C5:4F:DD:3D:D4:97:A4:FE:D2:5D:2F:5F:28:36:FB:FD:27:EA:0B:EA:29:89:55:AD:B3:26:02",
    "3": "FC:1F:67:80:EE:9C:9F:AE:E7:90:8A:79:BA:6C:54:CD:6C:B1:4C:24:19:43:53:28:65:7E:C6:18:F3:A8:71:B5:E7:A0:3C:DA:BF:7D:BC:23:A6:C7:97:96:95:20:B2:13",
    "4": "D9:C9:87:12:EE:DE:D3:F9:D6:48:64:94:4C:37:3E:73:90:74:DA:49:A3:A6:4A:64:16:B7:31:DF:EB:49:45:39:0B:19:70:5F:60:E5:3F:D6:2F:26:2B:40:11:4B:55:98",
    "5": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "6": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "7": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "8": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "9": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
  },
  "publicKey": null,
  "timestamp": 1745535851069,
  "userData": Uint8Array [
    115,
    104,
    97,
    50,
    53,
    54,
    58,
    251,
    134,
    90,
    237,
    117,
    89,
    127,
    216,
    181,
    35,
    141,
    94,
    145,
    53,
    72,
    140,
    119,
    16,
    197,
    31,
    156,
    187,
    3,
    246,
    200,
    237,
    90,
    66,
    219,
    118,
    228,
    186,
    59,
    115,
    104,
    97,
    50,
    53,
    54,
    58,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`nitro > should parse nitro enclave attestation 2`] = `
{
  "moduleId": "i-08855bf8be36b398e-enc01966543b0fb7fa4",
  "nonce": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "pcrs": {
    "0": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "1": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "10": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "11": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "12": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "13": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "14": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "15": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "2": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "3": "FC:1F:67:80:EE:9C:9F:AE:E7:90:8A:79:BA:6C:54:CD:6C:B1:4C:24:19:43:53:28:65:7E:C6:18:F3:A8:71:B5:E7:A0:3C:DA:BF:7D:BC:23:A6:C7:97:96:95:20:B2:13",
    "4": "D9:C9:87:12:EE:DE:D3:F9:D6:48:64:94:4C:37:3E:73:90:74:DA:49:A3:A6:4A:64:16:B7:31:DF:EB:49:45:39:0B:19:70:5F:60:E5:3F:D6:2F:26:2B:40:11:4B:55:98",
    "5": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "6": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "7": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "8": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
    "9": "00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00:00",
  },
  "publicKey": null,
  "timestamp": 1745517062380,
  "userData": Uint8Array [
    115,
    104,
    97,
    50,
    53,
    54,
    58,
    23,
    93,
    130,
    250,
    201,
    136,
    147,
    205,
    26,
    90,
    14,
    251,
    184,
    210,
    70,
    245,
    35,
    24,
    233,
    121,
    59,
    2,
    17,
    186,
    102,
    216,
    234,
    102,
    180,
    142,
    51,
    255,
    59,
    115,
    104,
    97,
    50,
    53,
    54,
    58,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
}
`;
